[package]
name = "pi_ecs"
version = "0.1.1"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "An excellent ECS framework"
repository = "https://github.com/GaiaWorld/pi_ecs.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "ecs"]

[dependencies]
quote = "1.0"
pi_null = "0.1"
pi_slotmap = "0.1"
pi_map = "0.1"
pi_any = "0.1"
pi_listener = "0.1"
pi_hash = "0.1"
pi_share = "0.1"
pi_graph = "0.1"
pi_async_graph = "0.1"
pi_async = "0.1"
pi_ecs_macros = {version="0.1", path = "macros"}
paste = "0.1"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
fixedbitset = "0.4"
derive_deref = "1.1"

[dev-dependencies]
rand = "0.8"
