[package]
name = "pi_ecs_macros"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2018"
description = "An excellent ECS framework"
license = "MIT OR Apache-2.0"
keywords = ["pi", "ecs", "ecs_macros"]

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0", features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
find-crate = "0.6"
